Fix face image overflow and touch tracking

--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -104,6 +104,9 @@ $assets-sprite-dimensions: true;
 html {
 	overflow-y: scroll;
 }
+body {
+	overflow: hidden;
+}
 h1, h2, h3, h4, h5, h5, h6 {
 	margin-top: 0;
 }
